--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,8 @@ check:
   script:
     - echo $XCHECK_TOKEN $GITLAB_TOKEN $PROJECT_ID $GITLAB_URL $SERVER_URL $ACTION_TYPE
     - ip addr
+    - whoami
+    - who
     - xcheck-cli -v
 scan:
   stage: Code Scan
